# dactylos

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
analysis/src/: fit2model.cc  fit2model_rs.cc  raw2root.cc  root2fit.cc
dactylos/: .CaenN6725.py.swp  CaenN6725.py  __init__.py
dactylos/analysis/: __init__.py  file_inspector.py  noisemodel.py  spectrum_fits.py  utils.py  waveform_analysis.py
dactylos/analysis/shaping/: __init__.py
doc/: Doxyfile.in
include/: CLCAEN6725.hh  CaenN6725.hh
python/: CraneLab  configuration-example.json  relay.py
python/CLHVControl/: setup.py  test.py
python/CLHVControl/clhvcontrol/: .CAENN1471HV.py.swp  CAENN1471HV.py  __init__.py
python/dactylos/: CMakeLists.txt  RunDigitizer.py  config_x.json
python/dactylos/dactylos/: CaenN6725.py  __init__.py
python/dactylos/include/: CaenN6725.hh
python/dactylos/src/: CaenN6725.cxx  module.cxx
python/hvcontrol/: test.py
python/offline_analysis/: README.md  offline_analysis.py  shaper_example.py  sos2c.py
python/risingsun/: test.py~
python/risingsun/risingsun/: .gui.py.swp  __init__.py
python/risingsun/risingsun/chamber/: .__init__.py.un~  __init__.py  chamber.py  ni_gpib_usb.py  prologix_gpib_usb.py
python/risingsun/risingsun/gui/: .gui.py.swp  __init__.py  gui.py
resources/: 10-CAENN1471-USB.rules  90-CAEN-HV-CUSTOM.rules  README.md  config_pg.json  config_x.json  extract_histogram.py  generate_report.py  rename.py
resources/configs/: config_run10xray.json  config_x.old.json  pulsegenerator.json  run_config.json
resources/risingsun/: .test.py.un~  setup.py  test.py
resources/risingsun/risingsun/: .__init__.py.un~  .gui.py.un~
resources/risingsun/risingsun/chamber/: .chamber.py.un~  __init__.py
resources/risingsun/risingsun/gui/: gui.py
resources/rootscripts/src/: root2fit_gain.cc  root2fit_linux.cc
resources/scripts/: CraneLab-Interactive.ipynb  SimpleCraneLab-Interactive.ipynb  runsequence.py
resources/veto data/: Sh0037_ch1_4.0us_noveto.txt
resources/veto_data/: Sh0037_ch1_4us_veto.txt  Sh0037_ch1_noveto.root  Sh0037_ch1_veto.root  Sh0037_ch2_4.0us_noveto.txt  Sh0037_ch2_4us_veto.txt  Sh0037_ch2_noveto.root  Sh0037_ch2_veto.root  Sh0037_ch3_4.0us_noveto.txt  Sh0037_ch3_4us_veto.txt  Sh0037_ch3_noveto.root  Sh0037_ch3_veto.root
src/: CLCAEN6725.cxx  CaenN6725.cxx  CraneLabDigitizer.cxx  module.cxx
